Fix mobile bar height and remove white space

--- a/style.css
+++ b/style.css
@@ -17,13 +17,11 @@
 
 }
 body {
-  position: relative;
+  margin: 0;
   height: 100%;
-  text-align: center;
+  padding: 0;
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
-  align-items: stretch;
   background-color: rgba(59, 109, 163, 0.303);
   overflow-y: auto;
 }
@@ -132,7 +130,7 @@ input{
 .array {
   display: flex;
   align-items: flex-end; 
-  justify-content: center;
+  justify-content: space-between;
   padding: 0.5rem;
   flex-direction: row;
   flex-wrap: wrap;
